2007-10-18  Philip Van Hoof  <pvanhoof@gnome.org>

	* Operation notifactions no longer wait for 4 seconds to group them
	together. This is experimental. Uncomment line 620 of
	camel-operation.c to undo this.

2007-10-17  Philip Van Hoof  <pvanhoof@gnome.org>

	* Made sure that the standard Maildir format also works (with the ':'
	as flag separator character). The standard for Tinymail, though, is to
	use the '!' character (fallback when reading is ':').
	* Made the sizes of Maildir E-mails more accurate (using stat())

2007-10-17  Vivek Sekar  <viveksekar@gmail.com>

	* Added microb-engine-dev and changed the debug architecture to 'any'
	in debian/control.maemo1.

2007-10-16  Philip Van Hoof  <pvanhoof@gnome.org>

	* Fixed regression on the regression fix of a few days ago :)
	* Renamed Maildir filenames to have '!' in stead of '_' or ':' in
	their filenames

2007-10-15  Jose Dapena Paz  <jdapena@igalia.com>

	* Some fixes to mozembed build.
	* Disable mozembed packages build in maemo.

2007-10-12  Philip Van Hoof  <pvanhoof@gnome.org>

	* Regression on yesterday's summary related patch. Fixed
	* Regression on yesterday's mime part parser patch. Fixed

2007-10-11  Philip Van Hoof  <pvanhoof@gnome.org>

	* iconv error situation handler
	* Bugfix when the summary file was not yet created for a Maildir

2007-10-10  Jose Dapena Paz  <jdapena@igalia.com>

	* m4/moz.m4: add support for gtkmozembed library using gtkembedmoz.pc.
	Also export mozilla_home.
	* debian/rules.maemo: compile with mozembed support.
	* debian/control.maemo1: compile with mozembed support.
	* tests/c-demo/tny-main.c: remove mozilla calls in main.
	* configure.ac: some fixes for html module detection. Use mozilla home.
	Now we only use detection of xpcom for being sure we've got an engine
	path.
	* Removed libtinymailui-mozembed/mozilla-preferences.{cpp,h}, as we now
	use gtk moz embed api to set preferences.
	* libtinymalui-mozembed/Makefile.am: removed mozilla preferences from
	build.