@@ -3,6 +3,8 @@
 	* Operation notifactions no longer wait for 4 seconds to group them
 	together. This is experimental. Uncomment line 620 of
 	camel-operation.c to undo this.
+	* Added a -DMERGEFOLDERTEST that will perform a test for
+	TnyMergeFolder
 
 2007-10-17  Philip Van Hoof  <pvanhoof@gnome.org>
 
